# advent-of-code

./: .gitignore  README.md  aoc  pyproject.toml  requirements.txt
2015/day-01/: main.py
2015/day-02/: main.bash  main.py
2015/day-03/: main.py
2015/day-04/: main.bash  main.py
2015/day-05/: main.py
2015/day-07/: main.py
2015/day-09/: main.py
2015/day-10/: main.py
2015/day-11/: main.py
2015/day-12/: main.py
2015/day-13/: main.py
2015/day-15/: main.py
2015/day-16/: main.py
2015/day-17/: main.py
2015/day-18/: main.py
2015/day-19/: main.py
2015/day-20/: main.py
2015/day-21/: main.py
2015/day-22/: main.py
2015/day-23/: main.py
2016/day-01/: main.py
2016/day-03/: main.py
2016/day-04/: main.py
2016/day-07/: main.py
2016/day-12/: main.py
2018/day-01/: main.bash
2018/day-04/: main.py
2019/day-01/: main.py
2021/day-01/: main.py
2021/day-02/: main.c  main.py
2021/day-03/: main.py
2022/day-01/: main.py
2022/day-02/: main.py
2022/day-03/: main.c
2022/day-05/: main.py
2022/day-06/: main.py
2022/day-08/: main.py
2022/day-11/: main.py
2022/day-14/: main.py
2022/day-15/: main.py
2023/day-02/: main.py
2023/day-03/: main.c
2023/day-04/: main.py
2023/day-05/: main.py
2023/day-07/: main.py
2023/day-08/: main.c  main.py
2023/day-09/: main.py
2023/day-10/: main.py
2023/day-11/: main.py
2023/day-12/: main.py
2023/day-14/: main.py
2023/day-16/: main.py
2023/day-17/: main.py
2023/day-18/: main.py
2023/day-19/: main.py
2023/day-21/: main.py
2023/day-22/: main.py
2023/day-23/: main.py
2023/day-24/: main.py
2023/day-25/: main.py
2024/day-02/: main.py
2024/day-03/: main.py
2024/day-04/: main.py
2024/day-05/: main.c  main.py
2024/day-08/: main.py
2024/day-09/: main.c
2024/day-10/: main.py
2024/day-11/: main.py
2024/day-12/: main.py
2024/day-13/: main.c  main.py
2024/day-14/: main.py
2024/day-16/: main.py
2024/day-18/: main.py
2024/day-19/: main.py
2024/day-20/: main.py
2024/day-22/: main.py
2024/day-23/: main.py
2024/day-24/: main.py
2024/day-25/: main.py
2025/day-01/: main.bash  main.py
2025/day-02/: main.c  main.py
2025/day-03/: main.py
2025/day-04/: main.py
2025/day-05/: main.py
2025/day-06/: main.py
2025/day-07/: main.py
2025/day-08/: main.py
2025/day-09/: main.py
2025/day-10/: main.py
2025/day-11/: main.py
2025/day-12/: main.py
ASM/2024/: day13.asm
C/2024/: day13.c
Python/2016/: day13.py
challenges/2015/day-01/: main.py
challenges/2015/day-04/: main.py
challenges/2015/day-05/: main.py
challenges/2015/day-06/: main.py
challenges/2015/day-07/: Makefile  main-hsearch.c  main.c  main.py
challenges/2015/day-08/: main.py
challenges/2015/day-09/: main.py
challenges/2015/day-10/: main.py
challenges/2015/day-11/: main.py
challenges/2015/day-12/: main.py
challenges/2015/day-13/: main.py
challenges/2015/day-14/: main.py
challenges/2015/day-16/: main.py
challenges/2015/day-21/: main.py
challenges/2015/day-24/: main.py
challenges/2015/day-25/: main.py
challenges/2016/day-01/: main.py
challenges/2016/day-02/: main.py
challenges/2016/day-03/: main.py
challenges/2016/day-05/: main.py
challenges/2016/day-06/: main.py
challenges/2016/day-08/: main.py
challenges/2016/day-12/: main.py
challenges/2016/day-13/: main.py
challenges/2017/day-01/: main.py
challenges/2018/day-01/: main.py
challenges/2018/day-02/: main.py
challenges/2018/day-03/: main.py
challenges/2018/day-04/: main.py
challenges/2020/day-01/: main.py
challenges/2020/day-10/: main.c  main.py
challenges/2021/day-01/: main.py
challenges/2021/day-02/: main.py
challenges/2022/day-01/: main.c
challenges/2022/day-04/: main.py
challenges/2022/day-06/: main.c
challenges/2022/day-10/: main.c
challenges/2022/day-12/: main.c
challenges/2022/day-13/: main.py
challenges/2023/day-02/: main.c
challenges/2023/day-05/: main.py
challenges/2023/day-06/: main.c  main.py
challenges/2023/day-07/: main.py
challenges/2023/day-13/: main.py
challenges/2023/day-15/: main.py
challenges/2023/day-18/: main.py
challenges/2023/day-19/: main.py
challenges/2023/day-20/: main.py
challenges/2023/day-21/: main.py
challenges/2023/day-23/: main.py
challenges/2023/day-24/: main.py
challenges/2024/day-01/: main.py
challenges/2024/day-02/: main.c
challenges/2024/day-03/: main.py
challenges/2024/day-04/: main.py
challenges/2024/day-06/: main.py
challenges/2024/day-09/: main.py
challenges/2024/day-10/: main.c  main.py
challenges/2024/day-11/: main.py
challenges/2024/day-12/: main.py
challenges/2024/day-13/: main.py
challenges/2024/day-15/: main.py
challenges/2024/day-17/: main.py
challenges/2024/day-18/: main.py
challenges/2024/day-19/: main.py
challenges/2024/day-21/: main.py
challenges/2024/day-24/: main.py
challenges/2024/day-25/: main.py
challenges/2025/day-01/: main.c  main.py
challenges/2025/day-02/: main.asm  main.bash  main.py
challenges/2025/day-03/: main.c
challenges/2025/day-08/: main.py
challenges/2025/day-09/: main.py
challenges/2025/day-10/: main.py
challenges/2025/day-12/: main.py
src/: Makefile
src/2015/day-01/: main.bash
src/2015/day-02/: main.bash  main.py
src/2015/day-03/: main.py
src/2015/day-05/: main.py
src/2015/day-06/: main.py
src/2015/day-07/: main.py
src/2015/day-08/: main.py
src/2015/day-10/: main.py
src/2015/day-11/: main.py
src/2015/day-12/: main.py
src/2015/day-13/: main.py
src/2015/day-14/: main.py
src/2015/day-15/: main.py
src/2015/day-17/: main.py
src/2015/day-18/: main.py
src/2022/day-02/: main.c
src/advent_of_code/: cli.py
src/cli/: cli.py  logger.py  readme.py
src/lib/: aoclib.asm  aoclib.bash  aoclib.c  aoclib.h  aoclib.py
utils/: aoc-fetch  aoc-init  aoc-migrate  aoc-readme  aoc-session.example
(+106 files in other folders)
