[project]
name = "advent-of-code"
version = "2.1.0"
description = "Advent of Code CLI Tool"
authors = [{ name = "heavycircle" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "requests>=2.30",
    "typer>=0.20.0",
    "z3-solver>=4.15.4.0",
]

[project.optional-dependencies]
lint = ["codespell>=2.4.1", "isort>=7.0.0", "ruff>=0.13.2"]

[project.scripts]
aoc = "cli.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "I", "F", "B", "C90", "PL", "TC", "UP"]
ignore = [
    "D107",    # Missing docstring in __init__
    "E501",    # Line too long
    "PLR2004", # Magic values in comparisons
    "PLW0603", # Using 'global' to edit globals
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = []
lines-after-imports = 2

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_bytes = true
strict_equality = true
local_partial_types = true
enable_error_code = [
    "ignore-without-code",
    "truthy-bool",
    "truthy-iterable",
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "explicit-override",
    "deprecated",
]
show_column_numbers = true
show_error_codes = true
follow_imports = "silent"
follow_untyped_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--junitxml=junit.xml",
    "--cov-report=term",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["."]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.xml]
output = "coverage.xml"

[tool.codespell]
skip = "*/real.txt,test.txt"
