[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code"
version = "2.1.0"
description = "Advent of Code CLI Tool"
authors = [{ name = "heavycircle" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["bs4>=0.0.2", "requests>=2.30", "typer>=0.20.0"]

[project.optional-dependencies]
dev = ["networkx>=3.4.2", "numpy>=2.2.6", "z3-solver>=4.15.4.0"]
lint = ["codespell>=2.4.1", "mypy>=1.19.1", "pylint>=4.0.4", "ruff>=0.13.2"]

[project.scripts]
aoc = "advent_of_code.cli.main:main"

[tool.pylint.main]
py-version = "3.10"
init-import = true
disable = [
    "global-statement",
    "invalid-name",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
    "wrong-import-order",
    "line-too-long",
    "missing-module-docstring",
]
enable = [
    "raw-checker-failed",
    "bad-inline-option",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "useless-option-value",
]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.check_elif",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.docparams",
    "pylint.extensions.for_any_all",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
]
runtime-typing = true
score = true
fail-under = 9.0

[tool.pylint.typecheck]
ignored-modules = ["networkx", "requests"]

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"

[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
min-similarity-lines = 10

[tool.pylint.format]
max-line-length = 120

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "I", "F", "B", "C90", "PL", "TC", "UP", "FA"]
ignore = [
    "PLR2004", # Magic values in comparisons
    "PLW0603", # Using 'global' to edit globals
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = []
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
exclude = ["tests/", "challenges/"]
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_bytes = true
strict_equality = true
local_partial_types = true
enable_error_code = [
    "ignore-without-code",
    "truthy-bool",
    "truthy-iterable",
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "explicit-override",
    "deprecated",
]
show_column_numbers = true
show_error_codes = true
follow_imports = "silent"
follow_untyped_imports = true

[tool.codespell]
skip = "*/real.txt,test.txt"
